-changed CSS formatting to get elements aligned correctly in react debug view -changed quiz length

--- a/client/main.css
+++ b/client/main.css
@@ -50,15 +50,17 @@ p.correctAnswer {
 
 .button {
   /** float: center; */
-  margin: '10px 10px 10px 0'
+  /** margin: '10px 10px 10px 0'; */
 }
 
+/**
 div {
     margin-top: 10px;
     margin-bottom: 5px;
     margin-right: 150px;
     margin-left: 80px;
 }
+*/
 
 h1 {
   font-size: 3.5em;
